# RPi_WS_LCD

./: .gitignore  CMakeLists.txt  LCD.service  LCD_crontab  LICENSE  README.md  degree.txt
lib/Config/: DEV_Config.c  DEV_Config.h  Debug.h
lib/Fonts/: font20.c  fonts.h
lib/GUI/: GUI_BMP.c  GUI_BMP.h  GUI_Paint.c  GUI_Paint.h
lib/LCD/: LCD_1in3.c  LCD_1in3.h
src/: i2c_utils.c  i2c_utils.h  init.c  init.h  main.c  utils.c  utils.h
